2007-12-11  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/check-declare.el (check-declare-verify): Handle deffoo.

2007-12-11  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-aent.el (math-restore-underscores)
	(math-string-restore-underscores): New functions.
	(math-read-factor): Properly check variable names with underscores
	for entries in `math-expr-variable-mapping'.

	* calc/calc-lang.el (math-lang-name): New property name.

	* calc/calc.el (calc-set-mode-line): Use `math-lang-name'
	to set language name.

2007-12-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-select-display): Fix important typo.
	(server-process-filter): Turn a "" display into nil.

2007-12-09  Juri Linkov  <juri@jurta.org>

	* replace.el (keep-lines, flush-lines, how-many): Doc fix.
	Check search-upper-case before calling isearch-no-upper-case-p
	to set case-fold-search.
	(occur): Doc fix.
	(occur-1, perform-replace): Check search-upper-case before calling
	isearch-no-upper-case-p to set case-fold-search.

	* isearch.el (search-upper-case): Doc fix.
	(isearch-mode-map): Bind `M-s o' to isearch-occur.
	(isearch-query-replace): Doc fix.  Let-bind search-upper-case to nil.
	(isearch-query-replace-regexp): Doc fix.
	(isearch-occur): New function.

2007-12-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* pgg.el, pgg-parse.el (declare-function): Add new no-op macro for
	backward compatibility.

	* net/imap.el (imap-string-to-integer): New function.

2007-12-09  David Kastrup  <dak@gnu.org>

	* emacs-lisp/lisp-mnt.el (lm-verify): Make it work with
	directories.  Not sure anybody uses this anymore, though.

2007-12-09  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Fix pr-interface-map initialization code.
	(pr-version): New version 6.9.3.
	(pr-f-set-keymap-parents): Replace by pr-set-keymap-parents.
	(pr-f-set-keymap-name): Replace by pr-set-keymap-name.
	(pr-f-read-string): Replace by pr-read-string.